tests/additional/fail/if-fun.mvm
int x;
function void foo() { print('hi\n'); }
if (1) {
    x = foo();
    string y;
    x = y;
}
